# dev-command

./: Cargo.toml  build.rs  flake.nix  module.nix
example/: config.toml
extra/: dev.bash
nix/: package.nix
src/: cli.rs  config.rs  create.rs  main.rs
