[package]
name = "dev"
version = "1.0.0"
edition = "2021"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "*"

[dependencies]
clap = { version = "4", features = ["derive"] }
shellexpand = "3"
toml= "0.8.22"
dirs = "5"
serde = { version = "1.0.219", features = ["derive"] }
